<?xml version="1.0" encoding="utf-8"?>
<com.easycore.stromecek.views.MyRevealFrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<View android:id="@+id/revealView"
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:visibility="invisible"
		  android:background="@color/colorPrimary"/>

	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:orientation="vertical">

		<View android:layout_width="match_parent"
			  android:layout_height="1px"
			  android:background="@color/background_light"/>

		<TextView android:id="@+id/bottomSheetButton"
				  android:clickable="true"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:minHeight="60dp"
				  android:layout_marginTop="3dp"
				  android:layout_marginBottom="5dp"
				  android:padding="@dimen/activity_horizontal_margin"
				  android:fontFamily="sans-serif-condensed"
				  android:gravity="end"
				  android:textStyle="bold"
				  android:textSize="18sp"
				  android:textColor="@android:color/white"
				  tools:textColor="@android:color/black"
				  android:text="@string/color_question"/>

		<TextView android:id="@+id/redColorTxtView"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  style="@style/ColorButtons"
				  tools:textColor="@android:color/black"
				  android:drawableLeft="@drawable/circle_red"
				  android:drawableStart="@drawable/circle_red"
				  android:text="@string/color_red"
				  android:src="@drawable/circle_red"/>

		<TextView android:id="@+id/greenColorTxtView"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  style="@style/ColorButtons"
				  tools:textColor="@android:color/black"
				  android:drawableLeft="@drawable/circle_green"
				  android:drawableStart="@drawable/circle_green"
				  android:text="@string/color_green"
				  android:src="@drawable/circle_red"/>

		<TextView android:id="@+id/blueColorTxtView"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  style="@style/ColorButtons"
				  tools:textColor="@android:color/black"
				  android:drawableLeft="@drawable/circle_blue"
				  android:drawableStart="@drawable/circle_blue"
				  android:text="@string/color_blue"
				  android:src="@drawable/circle_blue"/>

		<TextView android:id="@+id/yellowColorTxtView"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  style="@style/ColorButtons"
				  tools:textColor="@android:color/black"
				  android:drawableLeft="@drawable/circle_yellow"
				  android:drawableStart="@drawable/circle_yellow"
				  android:text="@string/color_yellow"
				  android:src="@drawable/circle_yellow"/>
	</LinearLayout>


</com.easycore.stromecek.views.MyRevealFrameLayout>